--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+  <meta charset="utf-8">
+  <meta name="Description" content=" Bookrossing - propagowanie idei czytania książek poprzez ich uwalnianie. Losy książek można sledzić.">
+  <meta name="Keywords" content="book, bookcrossing, książka, uwalnianie, ruch uwalniania książek">
+	
+	<title>BookCrossing</title>
+  <link rel="stylesheet" href="bcstyle.css">
 
+</head>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum tempus egestas sed sed risus. Ut porttitor leo a diam sollicitudin tempor. Blandit massa enim nec dui. Et malesuada fames ac turpis. Vel turpis nunc eget lorem. Tortor at risus viverra adipiscing at in tellus integer feugiat. Nibh mauris cursus mattis molestie a. Tincidunt tortor aliquam nulla facilisi cras fermentum. Nulla facilisi morbi tempus iaculis urna id. Consectetur adipiscing elit duis tristique sollicitudin nibh. Lorem ipsum dolor sit amet consectetur adipiscing elit. Mattis vulputate enim nulla aliquet porttitor lacus luctus. Dui faucibus in ornare quam viverra. Lorem ipsum dolor sit amet consectetur adipiscing. Commodo quis imperdiet massa tincidunt. Ac turpis egestas integer eget aliquet nibh praesent tristique magna. Accumsan sit amet nulla facilisi morbi tempus iaculis urna. Habitant morbi tristique senectus et netus. Ac turpis egestas maecenas pharetra.
+
+Vulputate dignissim suspendisse in est. Neque ornare aenean euismod elementum nisi quis. Etiam sit amet nisl purus in mollis nunc sed id. Quisque non tellus orci ac auctor augue mauris augue neque. Lorem donec massa sapien faucibus et. Sed enim ut sem viverra aliquet eget. Nulla facilisi morbi tempus iaculis urna id volutpat lacus. Malesuada pellentesque elit eget gravida cum sociis natoque. Ornare lectus sit amet est placerat in egestas erat imperdiet. Gravida quis blandit turpis cursus in. In tellus integer feugiat scelerisque varius morbi.
+
+Consectetur adipiscing elit duis tristique sollicitudin nibh sit. Felis eget nunc lobortis mattis aliquam faucibus purus in massa. Velit ut tortor pretium viverra suspendisse potenti. Turpis massa tincidunt dui ut ornare lectus. Enim ut tellus elementum sagittis vitae et leo duis ut. Aliquam ut porttitor leo a diam. Aliquet nec ullamcorper sit amet risus nullam eget felis eget. Parturient montes nascetur ridiculus mus mauris vitae ultricies leo. Enim facilisis gravida neque convallis. Imperdiet dui accumsan sit amet nulla.
+
+Et netus et malesuada fames ac turpis. At volutpat diam ut venenatis tellus in. Ac tortor dignissim convallis aenean et tortor at risus. Eget sit amet tellus cras. Commodo quis imperdiet massa tincidunt nunc pulvinar sapien et ligula. Diam donec adipiscing tristique risus nec feugiat in fermentum posuere. Nec tincidunt praesent semper feugiat nibh sed pulvinar. Nulla posuere sollicitudin aliquam ultrices sagittis. Sed felis eget velit aliquet sagittis id. Tortor aliquam nulla facilisi cras fermentum odio.
+
+Parturient montes nascetur ridiculus mus mauris. Ullamcorper sit amet risus nullam eget felis eget nunc. Cursus mattis molestie a iaculis at erat pellentesque. Blandit cursus risus at ultrices. Blandit massa enim nec dui. Hac habitasse platea dictumst vestibulum. Morbi enim nunc faucibus a pellentesque sit amet. Facilisi etiam dignissim diam quis enim lobortis. Eu lobortis elementum nibh tellus molestie nunc. Blandit turpis cursus in hac habitasse platea dictumst quisque sagittis. Condimentum id venenatis a condimentum vitae. Felis eget nunc lobortis mattis aliquam faucibus purus in massa. Amet justo donec enim diam vulputate. Amet dictum sit amet justo donec enim diam. A cras semper auctor neque. Massa tincidunt nunc pulvinar sapien et. Sapien eget mi proin sed. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque.
+<body>
+ </body>
+</html>
