--- a/index_zadanie.html
+++ b/index_zadanie.html
@@ -6,6 +6,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="main.css">
+  <style> 
+      body {
+   background-color: #888888;
+  }
+  h1 {
+    font-size: 3em;
+    color: red;
+  }
+
+  li {
+   font-family: verdana;
+  }
+
+  p {
+    font-family: courier;
+    font-size: 160%;
+  }
+  </style>
 </head>
 <body>
   <h1>Lorem ipsum</h1>
