--- a/index_zadanie.html
+++ b/index_zadanie.html
@@ -5,7 +5,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="main.css">
+<style>
+  p {
+  color: red;
+  font-family: courier;
+  font-size: 160%;
+}
+  h1 {
+  color: blue;
+  font-family: verdana;
+  font-size: 300%;
+}
+  li {
+    color:pink;
+  }
+  body {
+    background-color:#D2D7D3;
+  }
+  </style>
  
 </head>
 <body>
